crates/keron-lang/tests/corpus/errors/check/concat_mismatched_lists.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `++` requires matching `List<T>` operands, found `List<Int>` and `List<String>`
  --> 1:10
  |
1 | val xs = [1, 2] ++ ["a", "b"]
  |          ^^^^^^^^^^^^^^^^^^^^^
